# fc-client

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac  fleet-commander-client.spec  pylintrc
data/: Makefile.am  fleet-commander-adclient.service.in  fleet-commander-adretriever.service.in  fleet-commander-client.conf  fleet-commander-client.service.in  fleet-commander-client.spec.in  fleet-commander-clientad.service.in  fleet-commander.conf  fleet-commander.csh  fleet-commander.sh  org.freedesktop.FleetCommanderClient.conf  org.freedesktop.FleetCommanderClient.service.in  org.freedesktop.FleetCommanderClientAD.conf  org.freedesktop.FleetCommanderClientAD.service.in  org.gnome.FleetCommander.conf
docs/: Makefile.am  fleet-commander-docs.xml  fleet-commander-overrides.txt  fleet-commander-sections.txt  fleet-commander.types
service/: Makefile.am  fc-cache-data.vala  fc-config-reader.vala  fc-configuration-adapter-dconf-profiles.vala  fc-configuration-adapter-goa.vala  fc-configuration-adapter-nm.vala  fc-configuration-adapter.vala  fc-content-monitor.vala  fc-dconf-db-writer.vala  fc-profile-cache-manager.vala  fc-source-manager.vala  fc-user-index.vala  fc-user-session-handler.vala  fc-utils.vala  fcmdr-extensions.c  fcmdr-goa-backend.h  fcmdr-gsettings-backend.c  fcmdr-gsettings-backend.h  fcmdr-http-profile-source.c  fcmdr-http-profile-source.h  fcmdr-login-monitor.c  fcmdr-login-monitor.h  fcmdr-logind-monitor.c  fcmdr-logind-monitor.h  fcmdr-profile-applies.c  fcmdr-profile-source.c  fcmdr-profile-source.h  fcmdr-profile.c  fcmdr-profile.h  fcmdr-service-backend.c  fcmdr-service-backend.h  fcmdr-service.c  fcmdr-service.h  fcmdr-settings-backend.c  fcmdr-settings-backend.h  fcmdr-update-goa.c  fcmdr-user-resolver.c  fcmdr-user-resolver.h  fcmdr-utils.c  fcmdr-utils.h  (+11 more)
service-ng/: Makefile.am  main.vala
service-old/: fcmdr-extensions.h  fcmdr-goa-backend.c  fcmdr-gsettings-backend.c  fcmdr-gsettings-backend.h  fcmdr-http-profile-source.c  fcmdr-local-user-resolver.c  fcmdr-local-user-resolver.h  fcmdr-profile-applies.h  fcmdr-profile-source.h  fcmdr-service-backend.c  fcmdr-service.c  fcmdr-service.h  fcmdr-update-goa.c  fcmdr-user-resolver.c  fcmdr-utils.h  fcmdr-yum-backend.c  fcmdr-yum-backend.h  org.gnome.FleetCommander.xml
src/: Makefile.am  fcclient.py
src/fleetcommanderclient/: configloader.py  fcadclient.py  fcadretriever.py  fcclient.py  fcclientad.py  freeiparetriever.py  mergers.py  settingscompiler.py
src/fleetcommanderclient/adapters/: __init__.py  base.py  chromium.py  dconf.py  firefox.py  firefoxbookmarks.py  goa.py  nm.py
src/fleetcommanderclient/configadapters/: __init__.py  base.py  chromium.py  dconf.py  firefox.py  firefoxbookmarks.py  goa.py  gsettings.py  networkmanager.py
tests/: 00_configloader.py  01_config_reader.vala  01_fcclient.sh  01_mergers.py  02_profile_cache_manager.vala  02_settingscompiler.py  03_configadapter_goa.py  03_source_manager.vala  04_cache_data.vala  04_configadapter_nm.py  05_configadapter_dconf.py  05_configadapter_gsettings.py  05_dconf_db_writer.vala  06_configadapter_chromium.py  06_configloader.py  06_user_index.vala  07_adapter_dconf_profiles.vala  07_configadapter_firefox.py  07_configloader.py  07_fcclient.sh  08_adapter_goa.vala  08_configadapter_firefoxbookmarks.py  09_adapter_nm.vala  10_fcadclient.py  10_fcadretriever.py  11_adapter_chromium.py  12_adapter_firefox.py  13_adapter_goa.py  14_adapter_dconf.py  15_adapter_nm.py  16_adapter_firefoxbookmarks.py  17_fcclientad.sh  Makefile.am  _01_fcclient_tests.py  _10_mmock_realmd_dbus.py  _fcclient_tests.py  _fcclientad_tests.py  cache-data-mock.vala  ldapmock.py  network-manager-mock.vala  (+6 more)
tests/azure/: azure-pipelines.yml
tests/azure/templates/: prepare-build-fedora.yml  prepare-lint-fedora.yml
tests/data/: applies-duplicates.json  applies-goa.json  applies-libreoffice.json  applies-nm-all.json  applies-simple.json  interval-zero.conf  profile-dumb.json  profile-empty.json  profile-goa.json  profile-gsettings.json  profile-libreoffice.json  profile-mixed.json  profile-moar.json  profile-nm-all.json  profile-nm-simple.json  profile-simple.json  simple-test.conf  test_profile.json
tests/data/sampleprofiledata/: 0050-0050-0000-0000-0000-Test1.profile  0050-0050-0000-0000-0000-Test_Profile_1.profile  0050-0050-0000-0000-0000-Test_Profile_2.profile  0060-0060-0000-0000-0000-Test2.profile  0080-0080-0000-0000-0000.profile  0090-0090-0000-0000-0000-Test3.profile
tests/tools/: dconf
