fc_client_pydir = ${fcpythondir}/fleetcommanderclient
fc_client_py_SCRIPTS = \
	fleetcommanderclient/__init__.py \
	fleetcommanderclient/fcclient.py

#fc_client_constsdir = ${fcpythondir}/fleetcommander
#fc_client_consts_in_files = fleetcommander/constants.py.in
#fc_client_consts_DATA = fleetcommander/constants.py

EXTRA_DIST = \
	$(fc_client_py_SCRIPTS)

#CLEANFILESM = \
#	$(fc_client_consts_DATA)
